@@ -21,8 +21,8 @@ require_once('config.php');
 $link = mysqli_connect(DB_HOST, DB_USER, 
         DB_PASSWORD, DB_DATABASE);
 if (mysqli_connect_error()) {
-  $logMessage = 'MySQL Error 1: ' . mysqli_connect_error();
-  error_log($logMessage);
+  $errmsg1 = 'tokenRemove: failed to connect to server: ';
+  error_log($errmsg1 . mysqli_connect_error());
   echo "fail";
   exit;
 }
@@ -32,7 +32,7 @@ $id = $_SESSION['SESS_PLAYER_ID'];
 $qry1 = "DELETE FROM auth_tokens WHERE player_id=$id";
 $result1 = mysqli_query($link, $qry1);
 if (!$result1) {
-  error_log("DELETE FROM auth_tokens - Query failed");
+  error_log("tokenRemove: DELETE FROM auth_tokens - Query failed");
   echo "fail";
   exit;
 }
