@@ -1,3 +1,8 @@
+BOARD18 2.7.1 Release Notes
+ 
+Changes from 2.7.0 Release:
+Implemented fix for Issue 198 - Enhance PHP error logging - part 6
+
 BOARD18 2.7.0 Release Notes
  
 Changes from 2.6.9 Release:
